--- a/Swift.Extensibility/Swift.Extensibility.csproj
+++ b/Swift.Extensibility/Swift.Extensibility.csproj
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>6</LangVersion>
+    <DocumentationFile>bin\Debug\Swift.Extensibility.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,33 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="Swift.Toolkit, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Swift.Toolkit.1.0.0-alpha001\lib\net45\Swift.Toolkit.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Events\IEventBroker.cs" />
     <Compile Include="Events\IEventChannel.cs" />
-    <Compile Include="Functions\Function.cs" />
-    <Compile Include="Functions\IFunctionInfo.cs" />
-    <Compile Include="Functions\LambdaFunction.cs" />
-    <Compile Include="Functions\ParameterInfo.cs" />
-    <Compile Include="Functions\Suggestion.cs" />
     <Compile Include="Input\DataItem.cs" />
     <Compile Include="Input\IDataItemHandler.cs" />
     <Compile Include="Input\IDataItemMatcher.cs" />
@@ -67,12 +54,14 @@
     <Compile Include="Input\IInputTextCompletionProvider.cs" />
     <Compile Include="Input\KnownHotkeys.cs" />
     <Compile Include="ISwiftExtender.cs" />
+    <Compile Include="Plugins\PluginBase.cs" />
     <Compile Include="Plugins\IPlugin.cs" />
     <Compile Include="Plugins\IPluginMetadata.cs" />
     <Compile Include="Plugins\PluginMetadataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IHotkeyService.cs" />
     <Compile Include="Services\IInitializationAware.cs" />
+    <Compile Include="Services\IPluginServiceRegistry.cs" />
     <Compile Include="Services\IPluginServices.cs" />
     <Compile Include="Services\IPluginServiceUser.cs" />
     <Compile Include="Services\IShutdownAware.cs" />
@@ -97,9 +86,7 @@
     <Compile Include="UI\MenuItem.cs" />
     <Compile Include="UI\ViewModelBase.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataItems\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
