Lots of comment additions. Refactoring.

--- a/Swift.Extensibility/Swift.Extensibility.csproj
+++ b/Swift.Extensibility/Swift.Extensibility.csproj
@@ -45,16 +45,20 @@
     <Compile Include="Events\IEventBroker.cs" />
     <Compile Include="Events\IEventChannel.cs" />
     <Compile Include="Input\DataItem.cs" />
+    <Compile Include="Input\Functions\FunctionInfo.cs" />
+    <Compile Include="Input\Functions\IFunctionManager.cs" />
     <Compile Include="Input\Functions\ISwiftFunctionCallContext.cs" />
+    <Compile Include="Input\Functions\ParameterInfo.cs" />
+    <Compile Include="Input\Functions\SupportedParameterTypes.cs" />
     <Compile Include="Input\IDataItemHandler.cs" />
     <Compile Include="Input\IDataItemMatcher.cs" />
     <Compile Include="Input\IDataItemRater.cs" />
     <Compile Include="Input\IDataItemSource.cs" />
-    <Compile Include="Input\IInput.cs" />
     <Compile Include="Input\IInputParser.cs" />
     <Compile Include="Input\IInputTextCompletionProvider.cs" />
     <Compile Include="Input\Functions\ISwiftFunctionSource.cs" />
-    <Compile Include="Input\KnownHotkeys.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Services\Hotkeys\KnownHotkeys.cs" />
     <Compile Include="Input\Functions\ParameterDescriptionAttribute.cs" />
     <Compile Include="Input\Functions\SwiftFunctionAttribute.cs" />
     <Compile Include="ISwiftExtender.cs" />
@@ -63,23 +67,26 @@
     <Compile Include="Plugins\IPluginMetadata.cs" />
     <Compile Include="Plugins\PluginMetadataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IHotkeyService.cs" />
+    <Compile Include="Services\Hotkeys\HotkeyEventArgs.cs" />
+    <Compile Include="Services\Hotkeys\HotkeyMode.cs" />
+    <Compile Include="Services\Hotkeys\HotkeyVisibility.cs" />
+    <Compile Include="Services\Hotkeys\IHotkeyService.cs" />
     <Compile Include="Services\IInitializationAware.cs" />
-    <Compile Include="Services\IPluginServiceRegistry.cs" />
     <Compile Include="Services\IPluginServices.cs" />
-    <Compile Include="Services\IPluginServiceUser.cs" />
     <Compile Include="Services\IShutdownAware.cs" />
     <Compile Include="Services\Logging\ILogger.cs" />
     <Compile Include="Services\Logging\ILoggingChannel.cs" />
-    <Compile Include="Services\Logging\ILogMessage.cs" />
-    <Compile Include="Services\Logging\ILogSource.cs" />
+    <Compile Include="Services\Logging\LogMessage.cs" />
+    <Compile Include="Services\Logging\MessageAddedEventArgs.cs" />
     <Compile Include="Services\Profile\IProfileProvider.cs" />
-    <Compile Include="Services\Profile\IUserProfile.cs" />
     <Compile Include="Services\Profile\UserProfile.cs" />
     <Compile Include="Services\Settings\BooleanSetting.cs" />
     <Compile Include="Services\Settings\CustomSetting.cs" />
+    <Compile Include="Services\Settings\FunctionSetting.cs" />
     <Compile Include="Services\Settings\Header.cs" />
+    <Compile Include="Services\Settings\FloatSetting.cs" />
     <Compile Include="Services\Settings\IntegerSetting.cs" />
+    <Compile Include="Services\Settings\ISetting.cs" />
     <Compile Include="Services\Settings\ISettingsSource.cs" />
     <Compile Include="Services\Settings\ISettingsStore.cs" />
     <Compile Include="Services\Settings\Setting.cs" />
