--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,8 @@ artifacts:
 - path: '**\Swift.Extensibility.dll'
   name: Swift.Extensibility.dll
 - path: '**\*.nupkg'
-deploy:
-  provider: NuGet
-  api_key:
-    secure: 3VAcdRzB2F5zv0BsV4Z+o31z5ZuiBWxmvz48/bIcV7/Zg74BiCMpqy9Iwdlm7BhS
-  artifact: /.*\.nupkg/
+#deploy:
+#  provider: NuGet
+#  api_key:
+#    secure: 3VAcdRzB2F5zv0BsV4Z+o31z5ZuiBWxmvz48/bIcV7/Zg74BiCMpqy9Iwdlm7BhS
+#  artifact: /.*\.nupkg/
