--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ assembly_info:
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 configuration: Release
+before_build:
+  - nuget restore
 build:
   project: Swift.Extensibility.sln
 after_test:
