--- a/Swift.Extensibility/Swift.Extensibility.csproj
+++ b/Swift.Extensibility/Swift.Extensibility.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Swift.Extensibility.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Swift.Toolkit, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
